--- a/assets/css/page/index.scss
+++ b/assets/css/page/index.scss
@@ -8,7 +8,7 @@
 	}
 
 	.grid {
-		padding: 24px 16px;
+		padding: 40px 16px;
 		width: 100%;
 		background: #F5B900;
 		grid-gap: 24px;
@@ -16,7 +16,6 @@
 		@media (min-width: 768px) {
 			max-width: 90%;
 			margin: 0 auto;
-			border-radius: 20px;
 			padding: 40px;
 			grid-template: auto / 1fr auto;
 		}
@@ -82,12 +81,10 @@
 			display: grid;
 			grid-gap: 18px;
 			order: 1;
-			padding: 0 16px;
 			
 			@media (min-width: 1024px) {
 				order: 0;
 				grid-gap: 28px;
-				padding: 0;
 			}
 			
 			h1 {
@@ -137,7 +134,7 @@
 			}
 			
 			.image {
-				background: #E0F8FF url(../images/hero_xs.png) no-repeat center;
+				background: #E0F8FF url(../images/hero_md.png) no-repeat center;
 				background-size: cover;
 				padding-top: calc(9 / 16 * 100%);
 				
@@ -165,96 +162,92 @@
 	}
 	
 	.about {
-		background: $grey4;
-		padding: 24px 0;
-		background: $grey4;
+		padding: 20px 0 40px;
 		
 		@media (min-width: 768px) {
-			padding: 40px 0;
+			padding: 20px 0 80px;
 		}
 		
 		.container {
-			grid-gap: 22px;
 			display: grid;
-			align-items: center;
-			
-			@media (min-width: 1024px) {
-				grid-template: auto / 35% 1fr;
-			}
-		}
-		
-		h2 {
-			font-size: 18px;
-			order: 1;
-			border-top: 1px solid $grey3;
-			padding: 22px 0 0;
-			
-			@media (min-width: 1024px) {
-				font-size: 24px;
-				order: 0;
-				padding: 0;
-				border: 0;
-			}
-			
-			span {
-				color: #F5B900;
-			}
-		}
-		
-		.number {
-			font-size: 40px;
-			font-weight: 600;
-			font-family: 'Poppins', sans-serif;
-			display: block;
-			// color: #2D63AF;
-			
-			@media (min-width: 1024px) {
-				font-size: 52px;
-			}
-		}
-		
-		.text {
-			color: #999;
-			display: block;
-			
-			@media (min-width: 1024px) {
-				font-size: 18px;
-			}
-		}
-		
-		.grid {
 			grid-gap: 16px;
-			order: 0;
 			
 			@media (min-width: 768px) {
+				grid-gap: 24px;
 				grid-template: auto / repeat(3, 1fr);
+			}
+			
+			@media (min-width: 1140px) {
 				grid-gap: 40px;
 			}
 			
-			@media (min-width: 1024px) {
-				order: 0;
+			div {
+				padding: 18px;
+				border: 1px solid $grey3;
+				display: flex;
+				align-items: center;
+				
+				@media (min-width: 768px) {
+					padding: 24px;
+					font-size: 19px;
+				}
+				
+				@media (min-width: 1140px) {
+					padding: 32px;
+				}
+				
+				span {
+					display: inline-flex;
+					align-items: center;
+					justify-content: center;
+					flex: 0 0 58px;
+					width: 58px;
+					height: 58px;
+					border-radius: 50%;
+					background: #fffaeb;
+					margin: 0 14px 0 0;
+					border: 1px solid #F5B900;
+					
+					@media (min-width: 1140px) {
+						margin: 0 24px 0 0;
+					}
+				}
 			}
 		}
 	}
 	
 	.products {
 		overflow: hidden;
-		
-		@media (min-width: 667px) {
-			background-size: 80%;
-		}
-		
-		@media (min-width: 1024px) {
-			background-size: 60%;
-		}
+		position: relative;
 		
 		@media (min-width: 1200px) {
-			padding: 40px 0 60px;
+			padding: 60px 0 100px;
+		}
+		
+		&::after {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 50%;
+			background: $grey4;
+		}
+		
+		h2 {
+			text-align: center;
+			margin-bottom: 28px;
+			
+			@media (min-width: 1140px) {
+				margin-bottom: 40px;
+			}
 		}
 		
 		.container {
 			overflow: auto;
 			padding: 28px 16px;
+			position: relative;
+ 			z-index: 1;
 			
 			&::-webkit-scrollbar {
 				display: none;
@@ -290,7 +283,7 @@
 			transition: .15s;
 			
 			&:hover {
-				background: #F3FDFF;
+				// background: #F3FDFF;
 				box-shadow: 0px 12px 28px rgba(166, 173, 201, .25), 0px 4px 12px rgba(154, 160, 185, .2);
 				
 				h3 a {
@@ -315,7 +308,7 @@
 			
 			.image {
 				padding-top: calc(9 / 16 * 100%);
-				background: #E0F8FF no-repeat center;
+				background: #ffe8a3 no-repeat center;
 				background-size: cover;
 				border-radius: 12px;
 				cursor: pointer;
@@ -458,6 +451,29 @@
 				time {
 					color: $grey1;
 				}
+			}
+		}
+	}
+	
+	.call-to-action {
+		background: transparent url(../images/cta_bg.jpg) no-repeat bottom center;
+		background-size: cover;
+		background-attachment: fixed;
+		
+		@media (min-width: 1024px) {
+			padding: 80px 0;
+		}
+		
+		@media (min-width: 1140px) {
+			padding: 120px 0;
+		}
+		
+		.grid {
+			background: rgba(0, 0, 0, .4);
+			backdrop-filter: blur(20px);
+			
+			h3 {
+				color: $grey3;
 			}
 		}
 	}
