--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -516,7 +516,7 @@ hr {
       align-items: center;
       grid-template: auto/repeat(2, auto); }
   .header .main-header {
-    padding: 16px 0 10px; }
+    padding: 16px 0; }
     @media (min-width: 1024px) {
       .header .main-header {
         padding: 26px 0 16px; } }
@@ -526,10 +526,10 @@ hr {
         .header .main-header .container {
           justify-content: space-between; } }
     .header .main-header .logo {
-      width: 60px; }
+      width: 50px; }
       @media (min-width: 1024px) {
         .header .main-header .logo {
-          width: 90px; } }
+          width: 80px; } }
     .header .main-header .options-bar {
       position: fixed;
       bottom: 0;
@@ -1167,86 +1167,88 @@ hr {
   border-radius: 6px;
   height: auto; }
 
-.home-page .hero {
-  padding: 0 0 28px; }
-  @media (min-width: 1024px) {
-    .home-page .hero {
-      padding: 0 0 60px; } }
-  .home-page .hero .container {
-    display: grid;
+.home-page .hero .container {
+  position: relative; }
+@media (min-width: 1024px) {
+  .home-page .hero .wrapper {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
     align-items: center;
-    grid-gap: 20px; }
-    @media (min-width: 1024px) {
-      .home-page .hero .container {
-        grid-template: auto / 1fr 48%;
-        grid-gap: 40px; } }
-    @media (min-width: 1200px) {
-      .home-page .hero .container {
-        grid-template: auto / 1fr 42%; } }
-  .home-page .hero .content.left {
-    display: grid;
-    grid-gap: 18px;
-    order: 1; }
-    @media (min-width: 1024px) {
-      .home-page .hero .content.left {
-        order: 0;
-        grid-gap: 28px; } }
-    .home-page .hero .content.left h1 {
-      font-weight: 600;
-      font-size: 24px; }
-      @media (min-width: 1024px) {
-        .home-page .hero .content.left h1 {
-          font-size: 32px; } }
-      @media (min-width: 1200px) {
-        .home-page .hero .content.left h1 {
-          font-size: 48px; } }
-      .home-page .hero .content.left h1 span {
-        color: #F5B900;
-        font-weight: 600; }
-    .home-page .hero .content.left p {
-      color: #999;
-      font-size: 14px;
-      text-align: justify; }
-      @media (min-width: 768px) {
-        .home-page .hero .content.left p {
-          width: 80%; } }
-      @media (min-width: 1200px) {
-        .home-page .hero .content.left p {
-          font-size: 16px; } }
-    .home-page .hero .content.left .btn {
-      padding: 14px 22px;
-      border-radius: 6px;
-      height: auto; }
-  .home-page .hero .content.right {
-    order: 0; }
-    @media (min-width: 1024px) {
-      .home-page .hero .content.right {
-        order: 1; } }
-    .home-page .hero .content.right .image {
-      background: #E0F8FF url(../images/hero_md.png) no-repeat center;
-      background-size: cover;
-      padding-top: calc(9 / 16 * 100%); }
-      @media (min-width: 1024px) {
-        .home-page .hero .content.right .image {
-          background: #fff url(../images/hero_md.png) no-repeat center;
-          background-size: contain;
-          padding-top: 100%; } }
-  .home-page .hero .partner-glide img {
-    max-width: 80px; }
-  .home-page .hero .partner-glide .glide__arrows {
-    display: none; }
+    justify-content: space-between;
+    padding: 0 40px; } }
+@media (min-width: 1140px) {
+  .home-page .hero .wrapper {
+    padding: 0 60px; } }
+.home-page .hero .image {
+  padding-top: calc(9 / 16 * 100%);
+  background: #fffaeb url(../images/hero.jpg) no-repeat center;
+  background-size: cover; }
+  @media (min-width: 1024px) {
+    .home-page .hero .image {
+      padding-top: calc(9 / 21 * 100%);
+      background-attachment: fixed; } }
+  @media (min-width: 1280px) {
+    .home-page .hero .image {
+      padding-top: calc(9 / 28 * 100%); } }
+.home-page .hero .content.left {
+  display: grid;
+  grid-gap: 18px;
+  margin-bottom: 32px;
+  background: transparent;
+  padding: 24px 0;
+  max-width: 80%; }
+  @media (min-width: 1024px) {
+    .home-page .hero .content.left {
+      order: 0;
+      grid-gap: 28px;
+      padding: 40px;
+      margin-bottom: 0;
+      background: rgba(0, 0, 0, 0.4);
+      backdrop-filter: blur(10px);
+      max-width: 60%; } }
+  .home-page .hero .content.left h1 {
+    font-weight: 600;
+    font-size: 28px;
+    line-height: 1;
+    position: relative; }
     @media (min-width: 768px) {
-      .home-page .hero .partner-glide .glide__arrows {
-        display: block; } }
+      .home-page .hero .content.left h1 {
+        font-size: 38px; } }
+    @media (min-width: 1024px) {
+      .home-page .hero .content.left h1 {
+        color: #fff; } }
+    @media (min-width: 1140px) {
+      .home-page .hero .content.left h1 {
+        font-size: 42px; } }
+    .home-page .hero .content.left h1 span {
+      color: #F5B900;
+      font-weight: 600; }
+  @media (min-width: 1024px) {
+    .home-page .hero .content.left p {
+      color: #f4f4f4; } }
+  .home-page .hero .content.left .btn {
+    padding: 14px 22px;
+    border-radius: 6px;
+    height: auto; }
 .home-page .about {
-  padding: 20px 0 40px; }
+  padding: 0 0 40px; }
   @media (min-width: 768px) {
     .home-page .about {
-      padding: 20px 0 80px; } }
+      padding: 0 0 80px; } }
+  @media (min-width: 1024px) {
+    .home-page .about {
+      padding: 80px 0; } }
   .home-page .about .container {
     display: grid;
     grid-gap: 16px; }
-    @media (min-width: 768px) {
+    @media (min-width: 1024px) {
       .home-page .about .container {
         grid-gap: 24px;
         grid-template: auto/repeat(3, 1fr); } }
@@ -1281,7 +1283,8 @@ hr {
             margin: 0 24px 0 0; } }
 .home-page .products {
   overflow: hidden;
-  position: relative; }
+  position: relative;
+  padding: 10px 0 60px; }
   @media (min-width: 1200px) {
     .home-page .products {
       padding: 60px 0 100px; } }
@@ -1320,7 +1323,6 @@ hr {
         grid-template: auto/repeat(4, 1fr);
         white-space: normal; } }
   .home-page .products .item {
-    border-radius: 16px;
     background: #fff;
     padding: 6px;
     border: 1px solid #F5F5F5;
@@ -1332,9 +1334,9 @@ hr {
     .home-page .products .item:hover {
       box-shadow: 0px 12px 28px rgba(166, 173, 201, 0.25), 0px 4px 12px rgba(154, 160, 185, 0.2); }
       .home-page .products .item:hover h3 a {
-        color: #2D63AF; }
+        color: #F5B900; }
       .home-page .products .item:hover path {
-        stroke: #2D63AF; }
+        stroke: #F5B900; }
     @media (min-width: 768px) {
       .home-page .products .item {
         flex: 0 0 auto;
@@ -1348,7 +1350,6 @@ hr {
       padding-top: calc(9 / 16 * 100%);
       background: #ffe8a3 no-repeat center;
       background-size: cover;
-      border-radius: 12px;
       cursor: pointer;
       position: relative; }
       .home-page .products .item .image a {
@@ -1449,16 +1450,14 @@ hr {
 .home-page .call-to-action {
   background: transparent url(../images/cta_bg.jpg) no-repeat bottom center;
   background-size: cover;
-  background-attachment: fixed; }
+  background-attachment: fixed;
+  padding: 40px 0; }
   @media (min-width: 1024px) {
     .home-page .call-to-action {
       padding: 80px 0; } }
-  @media (min-width: 1140px) {
-    .home-page .call-to-action {
-      padding: 120px 0; } }
   .home-page .call-to-action .grid {
     background: rgba(0, 0, 0, 0.4);
-    backdrop-filter: blur(20px); }
+    backdrop-filter: blur(10px); }
     .home-page .call-to-action .grid h3 {
       color: #D9D9D9; }
 
