--- a/assets/css/page/index.scss
+++ b/assets/css/page/index.scss
@@ -56,47 +56,80 @@
 
 .home-page {
 	.hero {
-		padding: 0 0 28px;
-		
-		@media (min-width: 1024px) {
-			padding: 0 0 60px;
+		.container {
+			position: relative;
 		}
 		
-		.container {
-			display: grid;
-			align-items: center;
-			grid-gap: 20px;
-			
+		.wrapper {			
 			@media (min-width: 1024px) {
-				grid-template: auto / 1fr 48%;
-				grid-gap: 40px;
+				position: absolute;
+				top: 0;
+				right: 0;
+				bottom: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;				
+				display: flex;
+				flex-direction: row;
+				align-items: center;
+				justify-content: space-between;
+				padding: 0 40px;
 			}
 			
-			@media (min-width: 1200px) {
-				grid-template: auto / 1fr 42%;
+			@media (min-width: 1140px) {
+				padding: 0 60px;
+			}
+		}
+		
+		.image {
+			padding-top: calc(9 / 16 * 100%);
+			background: #fffaeb url(../images/hero.jpg) no-repeat center;
+			background-size: cover;
+			
+			@media (min-width: 1024px) {
+				padding-top: calc(9 / 21 * 100%);
+				background-attachment: fixed;
+			}
+			
+			@media (min-width: 1280px) {
+				padding-top: calc(9 / 28 * 100%);
 			}
 		}
 		
 		.content.left {
 			display: grid;
 			grid-gap: 18px;
-			order: 1;
+			margin-bottom: 32px;
+			background: transparent;
+			padding: 24px 0;
+			max-width: 80%;
 			
 			@media (min-width: 1024px) {
 				order: 0;
 				grid-gap: 28px;
+				padding: 40px;
+				margin-bottom: 0;
+				background: rgba(0, 0, 0, .4);
+				backdrop-filter: blur(10px);
+				max-width: 60%;
 			}
 			
 			h1 {
 				font-weight: 600;
-				font-size: 24px;
+				font-size: 28px;
+				line-height: 1;
+				position: relative;
 				
-				@media (min-width: 1024px) {
-					font-size: 32px;
+				@media (min-width: 768px) {
+					font-size: 38px;
 				}
 				
-				@media (min-width: 1200px) {
-					font-size: 48px;
+				@media (min-width: 1024px) {
+					color: $light;
+				}
+				
+				@media (min-width: 1140px) {
+					font-size: 42px;
 				}
 				
 				span {
@@ -106,16 +139,8 @@
 			}
 			
 			p {
-				color: $grey1;
-				font-size: 14px;
-				text-align: justify;
-				
-				@media (min-width: 768px) {
-					width: 80%;
-				}
-				
-				@media (min-width: 1200px) {
-					font-size: 16px;
+				@media (min-width: 1024px) {
+					color: $grey4;
 				}
 			}
 			
@@ -125,54 +150,24 @@
 				height: auto;
 			}
 		}
-		
-		.content.right {
-			order: 0;
-			
-			@media (min-width: 1024px) {
-				order: 1;
-			}
-			
-			.image {
-				background: #E0F8FF url(../images/hero_md.png) no-repeat center;
-				background-size: cover;
-				padding-top: calc(9 / 16 * 100%);
-				
-				@media (min-width: 1024px) {
-					background: #fff url(../images/hero_md.png) no-repeat center;
-					background-size: contain;
-					padding-top: 100%;
-				}
-			}
-		}
-		
-		.partner-glide {
-			img {
-				max-width: 80px;
-			}
-			
-			.glide__arrows {
-				display: none;
-				
-				@media (min-width: 768px) {
-					display: block;
-				}
-			}
-		}
 	}
 	
 	.about {
-		padding: 20px 0 40px;
+		padding: 0 0 40px;
 		
 		@media (min-width: 768px) {
-			padding: 20px 0 80px;
+			padding: 0 0 80px;
+		}
+		
+		@media (min-width: 1024px) {
+			padding: 80px 0;
 		}
 		
 		.container {
 			display: grid;
 			grid-gap: 16px;
 			
-			@media (min-width: 768px) {
+			@media (min-width: 1024px) {
 				grid-gap: 24px;
 				grid-template: auto / repeat(3, 1fr);
 			}
@@ -219,6 +214,7 @@
 	.products {
 		overflow: hidden;
 		position: relative;
+		padding: 10px 0 60px;
 		
 		@media (min-width: 1200px) {
 			padding: 60px 0 100px;
@@ -272,7 +268,6 @@
 		}
 		
 		.item {
-			border-radius: 16px;
 			background: #fff;
 			padding: 6px;
 			border: 1px solid #F5F5F5;
@@ -287,11 +282,11 @@
 				box-shadow: 0px 12px 28px rgba(166, 173, 201, .25), 0px 4px 12px rgba(154, 160, 185, .2);
 				
 				h3 a {
-					color: #2D63AF;
+					color: #F5B900;
 				}
 				
 				path {
-					stroke: #2D63AF;
+					stroke: #F5B900;
 				}
 			}
 			
@@ -310,7 +305,6 @@
 				padding-top: calc(9 / 16 * 100%);
 				background: #ffe8a3 no-repeat center;
 				background-size: cover;
-				border-radius: 12px;
 				cursor: pointer;
 				position: relative;
 				
@@ -459,18 +453,15 @@
 		background: transparent url(../images/cta_bg.jpg) no-repeat bottom center;
 		background-size: cover;
 		background-attachment: fixed;
+		padding: 40px 0;
 		
 		@media (min-width: 1024px) {
 			padding: 80px 0;
 		}
 		
-		@media (min-width: 1140px) {
-			padding: 120px 0;
-		}
-		
 		.grid {
 			background: rgba(0, 0, 0, .4);
-			backdrop-filter: blur(20px);
+			backdrop-filter: blur(10px);
 			
 			h3 {
 				color: $grey3;
